<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>reset</name>
    <version>0.0.0</version>
    <description>Reset the sim</description>
    <maintainer email="ian@bigair.net">Ian Rist</maintainer>
    <license>MIT</license>

    <depend>driverless_msgs</depend>
    <depend>fs_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
