<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sr_can</name>
  <version>0.0.0</version>
  <description>CAN to ROS2 drivers for the Motec L180</description>
  <maintainer email="mantacast4154@gmail.com">ian</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>state_estimation</depend>
  <depend>robot_localization</depend>
  <depend>ros_openimu</depend>
  <depend>rosboard</depend>
  <depend>rosbridge_server</depend>
  <depend>cv_bridge</depend>
  <depend>driverless_msgs</depend>
  <depend>fsds_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
