[package]
name = "cone_pipeline_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.6.2"
kdtree = "0.5.1"
futures = "0.3.19"
spade = "2.0.0"
nalgebra = "0.30.1"
num-traits = "0.2"
num-derive = "0.2"
